# harmonic-deformation

./: .gitattributes  CMakeLists.txt  README.md.temp  Reduction.cpp  _gitignore  convex_hull.cpp  deform.cpp
data/: _#bunny.off  bunny.off.bat  cube_2d.off  cube_2d_1.off  cube_2d_1_cage.off  cube_2d_cage.off
include/: Colors.h  Lasso.h
src/: Colors.cpp  Lasso.cpp  Reduction.cpp  deform.cpp  main.cpp
